[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/scripts/menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.5
margin_top = -291.0
margin_right = 157.5
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="VBoxContainer"]
margin_right = 315.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Local"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 315.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Server"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 292.0
margin_right = 315.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Client"

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 438.0
margin_right = 315.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Server and Client"
